@@ -33,6 +33,7 @@
     
     REACTIVATED: usermenu (now using the new useraction-system)
 
+    FIXED: problem with the windows created rar permissions
     FIXED: performance increasing: faster sorting, directory leaving
     FIXED: compare content error at remote urls (problem with sleep 2)
     FIXED: totals bar didn't update when an incremental refresh happened
